--- a/manifest.json
+++ b/manifest.json
@@ -174,6 +174,10 @@
         "enterprise_zenpacks/ZenPacks.zenoss.NFViSkin": {
             "repo": "zenoss/ZenPacks.zenoss.NFViSkin",
             "ref": "develop"
+        },
+        "enterprise_zenpacks/ZenPacks.zenoss.CiscoMercury": {
+            "repo": "zenoss/ZenPacks.zenoss.CiscoMercury",
+            "ref": "develop"
         }
     }
 }
