OpenStackInfrastructure: feature/nfvi -> develop
feature/nfvi was merged back into develop.

--- a/manifest.json
+++ b/manifest.json
@@ -149,7 +149,7 @@
         },
         "zenpacks/ZenPacks.zenoss.OpenStackInfrastructure": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStackInfrastructure",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.Ceph": {
             "repo": "zenoss/ZenPacks.zenoss.Ceph",
