--- a/manifest.json
+++ b/manifest.json
@@ -125,7 +125,7 @@
         },
         "zenpacks/ZenPacks.zenoss.CalculatedPerformance": {
             "repo": "zenoss/ZenPacks.zenoss.CalculatedPerformance",
-            "ref": "2.2.0"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PredictiveThreshold": {
             "repo": "zenoss/ZenPacks.zenoss.PredictiveThreshold",
