--- a/manifest.json
+++ b/manifest.json
@@ -153,7 +153,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.Ceph": {
             "repo": "zenoss/ZenPacks.zenoss.Ceph",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor",
