Update CiscoMonitor ZenPack: develop to 5.7.0
Changes from develop to 5.7.0:

- Add port-channel monitoring for Nexus 9000. (ZEN-22018)

https://github.com/zenoss/ZenPacks.zenoss.CiscoMonitor/compare/develop...5.7.0

--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor",
-            "ref": "develop"
+            "ref": "5.7.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.MultiRealmIP": {
             "repo": "zenoss/ZenPacks.zenoss.MultiRealmIP",
