Update Microsoft.HyperV ZenPack: develop to 1.3.0
Changes from develop to 1.3.0:

- Fix graphs to have a minimum Y axis of 0.
- Remove "Capacity" graph point from resource pool graph. (ZEN-20926)

https://github.com/zenoss/ZenPacks.zenoss.Microsoft.HyperV/compare/develop...1.3.0

--- a/manifest.json
+++ b/manifest.json
@@ -313,7 +313,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.Microsoft.HyperV": {
             "repo": "zenoss/ZenPacks.zenoss.Microsoft.HyperV",
-            "ref": "develop"
+            "ref": "1.3.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.DiscoveryMapping": {
             "repo": "zenoss/ZenPacks.zenoss.DiscoveryMapping",
