Change OpenStack ref from feature/nfvi to develop
No changes in the zenoss/ZenPacks.zenoss.OpenStack@feature/nfvi branch
are needed anymore. I'll delete the feature/nfvi branch once an nfvimon
build succeeds using the develop branch.

--- a/manifest.json
+++ b/manifest.json
@@ -145,7 +145,7 @@
         },
         "zenpacks/ZenPacks.zenoss.OpenStack": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStack",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.OpenStackInfrastructure": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStackInfrastructure",
