Change DynamicView: feature/nfvi -> develop

--- a/manifest.json
+++ b/manifest.json
@@ -109,7 +109,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.DynamicView": {
             "repo": "zenoss/ZenPacks.zenoss.DynamicView",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseReports": {
             "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports",
