Update CiscoUCS: feature/nfvi -> develop
The CiscoUCS feature/nfvi branch has been merged back into develop, and
will be deleted.

--- a/manifest.json
+++ b/manifest.json
@@ -161,7 +161,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCS": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoUCS",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.InstalledTemplatesReport": {
             "repo": "zenoss/ZenPacks.zenoss.InstalledTemplatesReport",
