--- a/manifest.json
+++ b/manifest.json
@@ -137,7 +137,7 @@
         },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.Docker": {
             "repo": "zenoss/ZenPacks.zenoss.Docker",
