Update PredictiveThreshold: develop -> 1.1.1
An update to PredictiveThreshold's develop branch has made it no longer
compatible with Zenoss 5.1. Fortunately prior to this there was no
difference between PredicticeThreshold's develop branch and the 1.1.1
release tag. So by changing the ref to 1.1.1 we get back to exactly
where we were before the breaking change to PredictiveThreshold.

zenoss/ZenPacks.zenoss.PredictiveThreshold@8b11e04

--- a/manifest.json
+++ b/manifest.json
@@ -129,7 +129,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PredictiveThreshold": {
             "repo": "zenoss/ZenPacks.zenoss.PredictiveThreshold",
-            "ref": "develop"
+            "ref": "1.1.1"
         },
         "zenpacks/ZenPacks.zenoss.ControlCenter": {
             "repo": "zenoss/ZenPacks.zenoss.ControlCenter",
