Update Docker: feature/nfvi -> develop
The feature/nfvi branch has been merged back into develop, and will be
deleted once this commit is pushed.

--- a/manifest.json
+++ b/manifest.json
@@ -141,7 +141,7 @@
         },
         "zenpacks/ZenPacks.zenoss.Docker": {
             "repo": "zenoss/ZenPacks.zenoss.Docker",
-            "ref": "feature/nfvi"
+            "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.OpenStack": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStack",
