ZEN-23733 Admin can delete default dashboard under correct circumstances, then everyone gets white screen.

--- a/manifest.json
+++ b/manifest.json
@@ -201,7 +201,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.WebsphereMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.WebsphereMonitor",
-            "ref": "1.2.2"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseCollector": {
             "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector",
