Update UCSCapacity ZenPack: 1.2.2 to hotfix/1.2.3
Temporarily moving to the hotfix/1.2.3 branch of UCSCapacity to allow
the fix for ZEN-24337 to be tested before releasing UCSCapacity 1.2.3.

Changes from 1.2.2 to hotfix/1.2.3:

- Fix all calc/agg datasources with a rate basis (ZEN-24337)

https://github.com/zenoss/ZenPacks.zenoss.UCSCapacity/compare/1.2.2...hotfix/1.2.3

--- a/manifest.json
+++ b/manifest.json
@@ -301,7 +301,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.UCSCapacity": {
             "repo": "zenoss/ZenPacks.zenoss.UCSCapacity",
-            "ref": "1.2.2"
+            "ref": "hotfix/1.2.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PortalIntegration": {
             "repo": "zenoss/ZenPacks.zenoss.PortalIntegration",
