Update UCSCapacity ZenPack: hotfix/1.2.3 to 1.2.3
Changes from 1.2.2 to 1.2.3:

- Fix all calc/agg datasources with a rate basis (ZEN-24337)

https://github.com/zenoss/ZenPacks.zenoss.UCSCapacity/compare/1.2.2...1.2.3

--- a/manifest.json
+++ b/manifest.json
@@ -297,7 +297,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.UCSCapacity": {
             "repo": "zenoss/ZenPacks.zenoss.UCSCapacity",
-            "ref": "hotfix/1.2.3"
+            "ref": "1.2.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PortalIntegration": {
             "repo": "zenoss/ZenPacks.zenoss.PortalIntegration",
