--- a/manifest.json
+++ b/manifest.json
@@ -71,7 +71,7 @@
         },
         "zenpacks/ZenPacks.zenoss.Microsoft.Windows": {
             "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows",
-            "ref": "2.6.1"
+            "ref": "hotfix/2.6.3"
         },
         "core": {
             "repo": "zenoss/zenoss-prodbin",
