Update Microsoft.Windows ZenPack: 2.6.1 to 2.6.3
Commit 648f5fd updated the Windows ZenPack from 2.6.1 to hotfix/2.6.3 so
changes could be tested before making the 2.6.3 release. Those changes
were tested successfully, and the 2.6.3 release was made. So we can now
set the manifest to point at the official 2.6.3 release.

Changes from 2.6.1 to 2.6.3:

- Fix potential "clusternetworks" and "clusternodes" errors after upgrading (ZEN-24401)
- Fix AttributeError: serviceclass on Windows Services after v515 update (ZEN-24347)
- Fix duplicated "Interfaces" components after upgrade (ZEN-24401)
- Fix WinRM ZenPack - Windows Services page elections conflict with WinService template exclusions (ZEN-24165)
- Fix Modifying the WinService template causes parallel reindexing of the same components (ZEN-24375)

https://github.com/zenoss/ZenPacks.zenoss.Microsoft.Windows/compare/2.6.1...2.6.3

--- a/manifest.json
+++ b/manifest.json
@@ -71,7 +71,7 @@
         },
         "zenpacks/ZenPacks.zenoss.Microsoft.Windows": {
             "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows",
-            "ref": "hotfix/2.6.3"
+            "ref": "2.6.3"
         },
         "core": {
             "repo": "zenoss/zenoss-prodbin",
