--- a/manifest.json
+++ b/manifest.json
@@ -301,7 +301,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.UCSCapacity": {
             "repo": "zenoss/ZenPacks.zenoss.UCSCapacity",
-            "ref": "1.2.4"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PortalIntegration": {
             "repo": "zenoss/ZenPacks.zenoss.PortalIntegration",
