--- a/manifest.json
+++ b/manifest.json
@@ -61,11 +61,11 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.Licensing": {
             "repo": "zenoss/ZenPacks.zenoss.Licensing",
-            "ref": "support/5.1.x"
+            "ref": "0.1.2"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.SupportBundle": {
             "repo": "zenoss/ZenPacks.zenoss.SupportBundle",
-            "ref": "develop"
+            "ref": "1.0.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenDeviceACL": {
             "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL",
@@ -89,11 +89,11 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.DistributedCollector": {
             "repo": "zenoss/ZenPacks.zenoss.DistributedCollector",
-            "ref": "support/5.1.x"
+            "ref": "3.0.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseCollector": {
             "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector",
-            "ref": "support/5.1.x"
+            "ref": "1.6.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.LDAPAuthenticator": {
             "repo": "zenoss/ZenPacks.zenoss.LDAPAuthenticator",
@@ -101,7 +101,7 @@
         },
         "zenpacks/ZenPacks.zenoss.Dashboard": {
             "repo": "zenoss/ZenPacks.zenoss.Dashboard",
-            "ref": "develop"
+            "ref": "1.2.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.AdvancedSearch": {
             "repo": "zenoss/ZenPacks.zenoss.AdvancedSearch",
@@ -109,7 +109,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.DynamicView": {
             "repo": "zenoss/ZenPacks.zenoss.DynamicView",
-            "ref": "develop"
+            "ref": "1.5.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseReports": {
             "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports",
@@ -121,11 +121,11 @@
         },
         "zenpacks/ZenPacks.zenoss.PythonCollector": {
             "repo": "zenoss/ZenPacks.zenoss.PythonCollector",
-            "ref": "develop"
+            "ref": "1.8.2"
         },
         "zenpacks/ZenPacks.zenoss.CalculatedPerformance": {
             "repo": "zenoss/ZenPacks.zenoss.CalculatedPerformance",
-            "ref": "develop"
+            "ref": "2.3.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PredictiveThreshold": {
             "repo": "zenoss/ZenPacks.zenoss.PredictiveThreshold",
@@ -133,35 +133,35 @@
         },
         "zenpacks/ZenPacks.zenoss.ControlCenter": {
             "repo": "zenoss/ZenPacks.zenoss.ControlCenter",
-            "ref": "1.2.2"
+            "ref": "1.2.5"
         },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
-            "ref": "develop"
+            "ref": "2.1.0"
         },
         "zenpacks/ZenPacks.zenoss.Docker": {
             "repo": "zenoss/ZenPacks.zenoss.Docker",
-            "ref": "develop"
+            "ref": "2.0.0"
         },
         "zenpacks/ZenPacks.zenoss.OpenStack": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStack",
-            "ref": "develop"
+            "ref": "1.2.3"
         },
         "zenpacks/ZenPacks.zenoss.OpenStackInfrastructure": {
             "repo": "zenoss/ZenPacks.zenoss.OpenStackInfrastructure",
-            "ref": "develop"
+            "ref": "feature/ZEN-25769"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.Ceph": {
             "repo": "zenoss/ZenPacks.zenoss.Ceph",
-            "ref": "develop"
+            "ref": "2.0.1"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor",
-            "ref": "develop"
+            "ref": "5.7.3"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCS": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoUCS",
-            "ref": "develop"
+            "ref": "2.5.2"
         },
         "zenpacks/ZenPacks.zenoss.InstalledTemplatesReport": {
             "repo": "zenoss/ZenPacks.zenoss.InstalledTemplatesReport",
@@ -169,19 +169,15 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoNFVI": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoNFVI",
-            "ref": "develop"
-        },
-        "enterprise_zenpacks/ZenPacks.zenoss.CiscoNFVIReports": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoNFVIReports",
-            "ref": "develop"
+            "ref": "1.0.1"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoNFVISkin": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoNFVISkin",
-            "ref": "develop"
+            "ref": "1.0.0"
         },
-        "enterprise_zenpacks/ZenPacks.zenoss.CiscoMercury": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoMercury",
-            "ref": "develop"
+        "enterprise_zenpacks/ZenPacks.zenoss.CiscoVIM": {
+            "repo": "zenoss/ZenPacks.zenoss.CiscoVIM",
+            "ref": "1.0.4"
         }
     }
 }
